fix firefox layout issue

--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ a {
     text-decoration: none;
 }
 
+#main-container {
+    height: 100%;
+}
+
 
 #tools-container {
     display: flex;
